<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nowPlaying"
    android:layout_width="fill_parent"
    android:layout_height="189dp"
    android:layout_marginLeft="22dp"
    android:layout_marginRight="@dimen/feed_item_margin"
    android:layout_marginTop="@dimen/feed_item_margin"
    android:background="@drawable/parent_rounded_corner"
    android:orientation="vertical"
    android:paddingBottom="2dp"
    android:visibility="visible"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="friend name"
        android:textAlignment="inherit"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/feed_item_profile_name" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/name"
            android:gravity="right"
            android:text="NOW"
            android:textAlignment="inherit"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/feed_item_profile_name"
            android:textStyle="bold" />

    </RelativeLayout>

    <include
        android:id="@+id/divider"
        layout="@layout/item_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/friendPic"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_centerHorizontal="false"
            android:layout_gravity="left"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:foregroundGravity="left|center_vertical"
            app:border_color="@color/black"
            app:border_width="2dp" />

        <LinearLayout
            android:id="@+id/nowPlaying3"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@+id/friendPic"
            android:foregroundGravity="right|center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/songName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/friendPic"
                android:layout_toRightOf="@+id/friendPic"
                android:foregroundGravity="center_vertical"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="song name"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_toEndOf="@+id/nowPlaying3"
            android:layout_toRightOf="@+id/nowPlaying3"
            android:foregroundGravity="right|center_vertical"
            android:gravity="right"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/syncButton"
                android:layout_width="71dp"
                android:layout_height="32dp"
                android:background="@drawable/tuneinbold"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:onClick="getTimeFromFirebase()"
                android:textAllCaps="false"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/tuneout_btn"
                android:layout_width="71dp"
                android:layout_height="33dp"
                android:background="@drawable/tuneoutpadding"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:textAllCaps="false"
                android:visibility="gone" />
        </LinearLayout>


    </RelativeLayout>

        <!--<android.support.v7.widget.CardView-->
        <!--android:id="@+id/view2"-->
        <!--android:layout_width="95dp"-->
        <!--android:layout_height="95dp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="9dp"-->
        <!--android:layout_weight="1"-->
        <!--android:elevation="12dp"-->
        <!--android:innerRadius="0dp"-->
        <!--android:shape="ring"-->
        <!--android:thicknessRatio="1.9"-->
        <!--app:cardCornerRadius="40dp">-->


        <!--<ImageView-->
        <!--android:id="@+id/friendPic"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="false"-->
        <!--android:foregroundGravity="left"-->
        <!--android:src="@drawable/evie_pic"></ImageView>-->

    <include
        android:id="@+id/divider1"
        layout="@layout/item_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.39"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/youtube"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="30dp"
            android:layout_height="34dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/comment"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="37dp"
            android:background="@xml/roundcorner"
            android:cropToPadding="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/youtubenotblack" />

        <LinearLayout
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/comment"
            android:layout_toRightOf="@+id/youtube"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton

                android:id="@+id/download"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="25dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="false"
                android:background="@xml/roundcorner"
                android:cropToPadding="true"
                android:foregroundGravity="center"
                android:onClick="download"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/download_newnotblack" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/comment"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="32dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="false"
            android:layout_centerInParent="true"
            android:layout_marginTop="1dp"
            android:background="@xml/roundcorner"
            android:cropToPadding="true"
            android:onClick="comment"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/iconnotblack" />

        <LinearLayout
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/redHeart"
            android:layout_toRightOf="@+id/comment"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/add"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="false"
                android:layout_centerInParent="false"
                android:layout_marginTop="7dp"
                android:adjustViewBounds="false"
                android:background="@xml/roundcorner"
                android:cropToPadding="true"
                android:onClick="addToPlaylist"
                android:scaleType="fitCenter"
                android:visibility="visible"
                app:srcCompat="@drawable/addnotblack" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/blackHeart"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="23dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="37dp"
            android:layout_marginTop="6dp"
            android:background="@xml/roundcorner"
            android:backgroundTint="@color/cardview_light_background"
            android:cropToPadding="true"
            android:onClick="likeSong"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/dislikenotblack" />

        <ImageButton
            android:id="@+id/redHeart"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="37dp"
            android:layout_marginTop="6dp"
            android:background="@xml/roundcorner"
            android:cropToPadding="false"
            android:onClick="dislikeSong"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            app:srcCompat="@drawable/likenotblack" />


    </RelativeLayout>

</LinearLayout>